test/spec_vectors/if/fail/module_27.wat
(module (func $type-else-value-nums-vs-void (if (i32.const 1) (then) (else (i32.const 1) (i32.const 2)))))